dnl Process this file with autoconf to produce a configure script.
AC_INIT(libconfig.c)
AM_INIT_AUTOMAKE(libconfig, 0.9)
AM_CONFIG_HEADER(ac_config.h)

dnl Checks for programs.
dnl AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_RANLIB
AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL

AM_PROG_LEX
AC_PROG_YACC

dnl Checks for libraries

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h stdint.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
 
dnl Checks for library functions.
 
AC_OUTPUT(Makefile doc/Makefile libconfig.pc libconfig++.pc)
